Added cooperative tabu search

--- a/Config.ini
+++ b/Config.ini
@@ -1,13 +1,13 @@
 ScoreToReach    =       0
-Algorithm       =       "SA"    ; GA, SA, LS, TS
+Algorithm       =       "CTS"    ; GA, SA, LS, TS, CTS
 NRuns           =       1
 [ SA ]
-        Iterations      =       100000
-        T0              =       10.0
+        Iterations      =       10000000
+        T0              =       2e-3
         Tfin            =       0.125
         dEmax           =       1
         dEmin           =       1
-        T0Mode          =       "AutoHigh"      ; Manual, EBased, AutoLow, AutoHigh
+        T0Mode          =       "AutoHigh"       ; Manual, EBased, AutoLow, AutoHigh
         TfinEBased      =       Yes
         Acceptance      =       "Exp"           ; Exp, Power, Tsallis, Threshold, Barker
         AcceptanceP     =       1
@@ -16,16 +16,16 @@ NRuns           =       1
         NReheat         =       1
         FastReheat      =       Yes
         Smoothing       =       1
-        StatusIters     =       10
+        StatusIters     =       10000
 [ GA ]
-        PopulationSize  =       150
+        PopulationSize  =       360
         Selection       =       "RankProp"      ; RankProp, Dist, DistToBest, 
         SelectionP      =       0
         Replacement     =       "WorstParent"   ; Worst, InvRank, WorstParent, RandParent, SimilarParent, Influx
         ReplacementP    =       3
         Acceptance      =       "Elitist"       ; Elitist, Unconditional
-        StopCriterion   =       "Score"         ; MaxGens, MaxNFE, Score
-        MaxGens         =       2000
+        StopCriterion   =       "MaxGens"         ; MaxGens, MaxNFE, Score
+        MaxGens         =       12000
         MaxNFE          =       1000000
         StatusGens      =       1
         SaveGens        =       0
@@ -34,4 +34,5 @@ NRuns           =       1
         StatusIters     =       1
 [ TS ]
         Iterations      =       10000
-        StatusIters     =       10
+	PopSize		=	9
+        StatusIters     =       1
