--- a/Config.ini
+++ b/Config.ini
@@ -1,34 +1,65 @@
 ScoreToReach    =       0
-Algorithm       =       "CTS"    ; GA, SA, LS, TS, CTS
-NRuns           =       1
+Algorithm       =       "GA"    ; GA, SA, LS, TS, CTS
+NRuns           =       1000
 [ SA ]
         Iterations      =       10000000
         T0              =       2e-3
         Tfin            =       0.125
         dEmax           =       1
         dEmin           =       1
-        T0Mode          =       "AutoHigh"       ; Manual, EBased, AutoLow, AutoHigh
+        T0Mode          =       "AutoHigh"      ; Manual, EBased, AutoLow, AutoHigh
         TfinEBased      =       Yes
         Acceptance      =       "Exp"           ; Exp, Power, Tsallis, Threshold, Barker
         AcceptanceP     =       1
         Schedule        =       "Exp"           ; Zero, Log, Power, Exp
         ScheduleP       =       1
-        NReheat         =       1
+        NReheat         =       3
         FastReheat      =       Yes
         Smoothing       =       1
         StatusIters     =       10000
 [ GA ]
-        PopulationSize  =       360
-        Selection       =       "RankProp"      ; RankProp, Dist, DistToBest, 
+        PopulationSize  =       169
+        Selection       =       "RankProp"
+				; Score-Based:
+				;    RankProp, FitUniform, NearRank
+				; Distance-based:
+				;    Dist, DistToBest
+				; Topological:
+				;    Ring, LeakyRing, LeakyRingTD, Torus, Segment,
+				;    SegmentTD, Crescent, VarDegreeTD, Halo, DirHalo,
+				;    ThreadedRings, InterconRings, ThreadedIsles, BridgedIsles,
+				;    ChainedIsles, InterconIsles, RandNearConRings, RandFarConRings,
+				;    RandNearConIsles, RandFarConIsles, DisconIslesTD
         SelectionP      =       0
-        Replacement     =       "WorstParent"   ; Worst, InvRank, WorstParent, RandParent, SimilarParent, Influx
+        Replacement     =       "WorstParent"
+				; Score-based:
+				;    Worst, WorstParent, RandParent, InvRank, InvRankLn, InvRankTD
+				; Distance-based:
+				;    SimParent,      CenParent, 
+				;    SimWorseParent, CenWorseParent, 
+				;    NoveltySim,     NoveltyCen, 
+				;    CompoundSimSD,  CompoundCenSD,
+				;    CompoundSimRD,  CompoundCenRD,
+				;    CompoundSimTD,  CompoundCenTD,
+				;    CompSoftSimSD,  CompSoftCenSD,
+				;    CompSoftSimRD,  CompSoftCenRD,
+				;    CompSoftSimTD,  CompSoftCenTD
+				; New solution injection:
+				;    InfluxRare, InfluxRD, InfluxSD, InfluxTD
+				; Topological:
+				;    Digraph
         ReplacementP    =       3
-        Acceptance      =       "Elitist"       ; Elitist, Unconditional
-        StopCriterion   =       "MaxGens"         ; MaxGens, MaxNFE, Score
-        MaxGens         =       12000
-        MaxNFE          =       1000000
-        StatusGens      =       1
+        Acceptance      =       "Elitist"
+				;Elitist, Unconditional, 
+				;Threshold, ThresholdTD, ThresholdSD, 
+				;DistToBestTD,   DistToBestSD,   DistToBestRD,
+				;DistToParentTD, DistToParentSD, DistToParentRD
+        StopCriterion   =       "MaxNFE"       ; MaxGens, MaxNFE, Score
+        MaxGens         =       65536
+        MaxNFE          =       16384
+        StatusGens      =       0
         SaveGens        =       0
+        TweakPopSize    =       Yes
 [ LS ]
         Mode            =       "Chain"         ; First, Best, Chain
         StatusIters     =       1
